--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,3 +6,14 @@ springdoc:
   swagger-ui:
     path: /swagger-ui.html
     enable: true
+spring:
+  datasource:
+    url: jdbc:postgresql://localhost:55000/postgres
+    username: postgres
+    password: postgres
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
