--- a/pom.xml
+++ b/pom.xml
@@ -87,8 +87,12 @@
 			<artifactId>flyway-database-postgresql</artifactId>
 			<version>10.17.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 
-    </dependencies>
+	</dependencies>
 
 	<build>
 		<plugins>
